feat: rename to 'The Cost of Scrolling' and add SEO meta tags

--- a/index.html
+++ b/index.html
@@ -3,7 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Social Media to Scale</title>
+    <title>The Cost of Scrolling</title>
+    <meta name="description" content="An interactive visualization showing the true scale of time spent on social media. Scroll to experience how minutes turn into hours, days, and years.">
+    <meta name="keywords" content="social media, time wasted, scrolling, visualization, digital wellness">
+    <meta name="author" content="Azaria Kelman, Isaac Mansell">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://azariak.github.io/SocialMediaToScale/">
+    <meta property="og:title" content="The Cost of Scrolling">
+    <meta property="og:description" content="An interactive visualization showing the true scale of time spent on social media. Scroll to experience how minutes turn into hours, days, and years.">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://azariak.github.io/SocialMediaToScale/">
+    <meta property="twitter:title" content="The Cost of Scrolling">
+    <meta property="twitter:description" content="An interactive visualization showing the true scale of time spent on social media. Scroll to experience how minutes turn into hours, days, and years.">
+
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>⏱️</text></svg>">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -13,7 +29,7 @@
     </div>
 
     <div class="header">
-        <h1>Social Media to Scale</h1>
+        <h1>The Cost of Scrolling</h1>
         <p class="subtitle">Keep scrolling...</p>
     </div>
 
