--- a/index.html
+++ b/index.html
@@ -115,6 +115,17 @@
                 <span class="floating-text" data-position="0.85">A full day of your life, gone</span>
             </div>
         </div>
+
+        <div class="end-screen">
+            <div class="end-screen-content">
+                <h2>You've reached the end.</h2>
+                <p>Time doesn't scale linearly—but your life does.</p>
+                <p>Every minute you just scrolled through represents real time you'll never get back.</p>
+                <div class="end-screen-cta">
+                    <p>What will you do with your next scroll?</p>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="footer">
