refactor: update end screen messaging for clarity

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="end-screen">
             <div class="end-screen-content">
                 <h2>You've reached the end.</h2>
-                <p>Time doesn't scale linearly—but your life does.</p>
+                <p>The scroll is endless—your time isn't.</p>
                 <p>Every minute you just scrolled through represents real time you'll never get back.</p>
                 <div class="end-screen-cta">
                     <p>What will you do with your next scroll?</p>
