refactor: update footer from 'project' to 'visualization' for clarity

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     </div>
 
     <div class="footer">
-        A <a href="https://github.com/azariak/SocialMediaToScale" target="_blank">project</a> by <a href="https://azariak.com" target="_blank">Azaria Kelman</a> and Isaac Mansell
+        A <a href="https://github.com/azariak/SocialMediaToScale" target="_blank">visualization</a> by <a href="https://azariak.com" target="_blank">Azaria Kelman</a> and Isaac Mansell
     </div>
 
     <script src="script.js"></script>
