feat: add subtle grass image to end screen

--- a/index.html
+++ b/index.html
@@ -134,20 +134,7 @@
                     </svg>
                     Share
                 </button>
-            </div>
-            <div class="grass">
-                <div class="grass-blade" style="left: 10%; animation-delay: 0s;"></div>
-                <div class="grass-blade" style="left: 15%; animation-delay: 0.3s;"></div>
-                <div class="grass-blade" style="left: 22%; animation-delay: 0.6s;"></div>
-                <div class="grass-blade" style="left: 30%; animation-delay: 0.2s;"></div>
-                <div class="grass-blade" style="left: 38%; animation-delay: 0.8s;"></div>
-                <div class="grass-blade" style="left: 45%; animation-delay: 0.4s;"></div>
-                <div class="grass-blade" style="left: 52%; animation-delay: 0.1s;"></div>
-                <div class="grass-blade" style="left: 60%; animation-delay: 0.7s;"></div>
-                <div class="grass-blade" style="left: 68%; animation-delay: 0.5s;"></div>
-                <div class="grass-blade" style="left: 75%; animation-delay: 0.9s;"></div>
-                <div class="grass-blade" style="left: 82%; animation-delay: 0.3s;"></div>
-                <div class="grass-blade" style="left: 90%; animation-delay: 0.6s;"></div>
+                <img src="grass.png" alt="" class="grass-image">
             </div>
         </div>
     </div>
