feat: add live stats bar tracking lives lost globally
- Add sticky stats bar below header showing lives lost (year/today/session)
- Calculate using 0.18993 lives lost per second constant
- Convert header and stats to fixed positioning for 100% stickiness
- Update footer text to "visual crusade" with team credits
- Adjust spacing and progress bar positioning

--- a/index.html
+++ b/index.html
@@ -43,6 +43,21 @@
         <p class="subtitle">Keep scrolling...</p>
     </div>
 
+    <div class="stats-bar">
+        <div class="stat-item">
+            <div class="stat-label">Lost since you arrived</div>
+            <div class="stat-value" id="statSince">0</div>
+        </div>
+        <div class="stat-item">
+            <div class="stat-label">Lost today</div>
+            <div class="stat-value" id="statToday">0</div>
+        </div>
+        <div class="stat-item">
+            <div class="stat-label">Lost this year</div>
+            <div class="stat-value" id="statYear">0</div>
+        </div>
+    </div>
+
     <div class="feed">
         <div class="milestone-card" data-time="1" data-source="">
             <div class="milestone-card-header">
@@ -144,7 +159,7 @@
     </div>
 
     <div class="footer">
-        A <a href="https://github.com/azariak/SocialMediaToScale" target="_blank">visualization</a> by <a href="https://azariak.com" target="_blank">Azaria Kelman</a> and Isaac Mansell
+        A <a href="https://github.com/azariak/SocialMediaToScale" target="_blank">visual crusade</a> by <a href="https://azariak.com" target="_blank">Azaria</a>, Isaac & Max
     </div>
 
     <!-- Sources Modal -->
