feat: add attribution modal with team credits
- Add clickable red links for Isaac and Max in footer
- Create attribution modal showing team credits
- Azaria: link to personal site
- Isaac: crown emoji
- Max: Renaissance man

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     </div>
 
     <div class="footer">
-        A <a href="https://github.com/azariak/SocialMediaToScale" target="_blank">visual crusade</a> by <a href="https://azariak.com" target="_blank">Azaria</a>, Isaac & Max
+        A <a href="https://github.com/azariak/SocialMediaToScale" target="_blank">visual crusade</a> by <a href="https://azariak.com" target="_blank">Azaria</a>, <a href="#" id="isaacLink">Isaac</a> & <a href="#" id="maxLink">Max</a>
     </div>
 
     <!-- Sources Modal -->
@@ -171,6 +171,30 @@
             </div>
             <div class="sources-modal-body" id="sourcesModalBody">
                 <!-- Content will be dynamically populated -->
+            </div>
+        </div>
+    </div>
+
+    <!-- Attribution Modal -->
+    <div class="sources-modal" id="attributionModal">
+        <div class="sources-modal-content">
+            <div class="sources-modal-header">
+                <h2>Credits</h2>
+                <button class="sources-modal-close" id="closeAttributionModal">×</button>
+            </div>
+            <div class="sources-modal-body">
+                <div class="attribution-section">
+                    <h3>Azaria Kelman</h3>
+                    <p><a href="https://azariak.com" target="_blank" rel="noopener noreferrer">azariak.com</a></p>
+                </div>
+                <div class="attribution-section">
+                    <h3>Isaac Mansell</h3>
+                    <p>👑</p>
+                </div>
+                <div class="attribution-section">
+                    <h3>Max</h3>
+                    <p>Renaissance man</p>
+                </div>
             </div>
         </div>
     </div>
