refactor: update stats bar labels and restore original subtitle text
- Change stats labels to "Lives scrolled" format
- Restore original subtitle message without lives count

--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
 
     <div class="stats-bar">
         <div class="stat-item">
-            <div class="stat-label">Lost since you arrived</div>
+            <div class="stat-label">Lives scrolled since arrival</div>
             <div class="stat-value" id="statSince">0</div>
         </div>
         <div class="stat-item">
-            <div class="stat-label">Lost today</div>
+            <div class="stat-label">Lives scrolled today</div>
             <div class="stat-value" id="statToday">0</div>
         </div>
         <div class="stat-item">
-            <div class="stat-label">Lost this year</div>
+            <div class="stat-label">Lives scrolled this year</div>
             <div class="stat-value" id="statYear">0</div>
         </div>
     </div>
