style: update Isaac's attribution to crown-ing

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 </div>
                 <div class="attribution-section">
                     <h3>Isaac Mansell</h3>
-                    <p>👑</p>
+                    <p>👑-ing</p>
                 </div>
                 <div class="attribution-section">
                     <h3>Max</h3>
