feat: add video support and sources calculation section
- Add positioned-video support with data-position parameter
- Include brainrot.mp4 video in 1 Day card with surrounding text
- Add Lives Lost Calculation section to sources modal with detailed math
- Link to University of Maine source for 11.5 billion hours statistic
- Update lives lost constant to 0.18992 for display

--- a/index.html
+++ b/index.html
@@ -128,6 +128,11 @@
                 </div>
                 <span class="floating-text" data-position="0.7">The sun sets. You're still scrolling.</span>
                 <span class="floating-text" data-position="0.85">A full day of your life, gone</span>
+                <span class="floating-text" data-position="0.949">Some brainrot for you...</span>
+                <video class="positioned-video" data-position="0.95" autoplay loop muted playsinline>
+                    <source src="media/brainrot.mp4" type="video/mp4">
+                </video>
+                <span class="floating-text" data-position="0.951">We haven't lost you yet, have we?</span>
             </div>
         </div>
 
