feat: add intro screen with scroll indicator
- Add full-viewport intro landing page before the feed
- Show bouncing down arrow that scrolls to feed on click
- Hide header, stats bar, and progress bar until user scrolls past intro
- Add placeholder text for social media hours statistic
- Crop brainrot video with clip-path

--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
         </div>
     </div>
 
+    <div class="intro-screen">
+        <div class="intro-content">
+            <p class="intro-text">The average person spends <strong>x.xx hrs</strong> on social media every day.</p>
+            <p class="intro-subtext">Scroll to see what that really means.</p>
+        </div>
+        <div class="scroll-indicator">
+            <span class="scroll-arrow">↓</span>
+        </div>
+    </div>
+
     <div class="feed">
         <div class="milestone-card" data-time="1" data-source="">
             <div class="milestone-card-header">
@@ -128,7 +138,7 @@
                 </div>
                 <span class="floating-text" data-position="0.7">The sun sets. You're still scrolling.</span>
                 <span class="floating-text" data-position="0.85">A full day of your life, gone</span>
-                <video class="positioned-video" data-position="0.95" data-caption-top="Some brainrot for you..." data-caption-bottom="We haven't lost you yet, have we?" autoplay loop muted playsinline>
+                <video id="brainrot-video" class="positioned-video" data-position="0.95" data-caption-top="Some brainrot for you..." data-caption-bottom="We haven't lost you yet, have we?" autoplay loop muted playsinline>
                     <source src="media/brainrot.mp4" type="video/mp4">
                 </video>
             </div>
