--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                     <p>👑-ing</p>
                 </div>
                 <div class="attribution-section">
-                    <h3>Max</h3>
+                    <h3>S. Max Fan</h3>
                     <p>Renaissance man</p>
                 </div>
             </div>
