chore: move grass.png to media folder

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     </svg>
                     Share
                 </button>
-                <img src="grass.png" alt="" class="grass-image">
+                <img src="media/grass.png" alt="" class="grass-image">
             </div>
         </div>
 
