feat: add hours scale indicator next to progress bar
- Display current time position (min/hrs/days) alongside scrollbar
- Label follows scroll progress and updates dynamically
- Calculates time from milestone card data

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 <body>
     <div class="progress-bar">
         <div class="progress-fill"></div>
+        <div class="progress-scale">
+            <span class="scale-label" data-hours="0">0 hrs</span>
+        </div>
     </div>
 
     <div class="header">
