visual crusade -> visualization

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     </div>
 
     <div class="footer">
-        A <a href="https://github.com/azariak/SocialMediaToScale" target="_blank">visual crusade</a> by <a href="https://azariak.com" target="_blank">Azaria</a>, <a href="#" id="isaacLink">Isaac</a> & <a href="#" id="maxLink">Max</a>
+        A <a href="https://github.com/azariak/SocialMediaToScale" target="_blank">visualization</a> by <a href="https://azariak.com" target="_blank">Azaria</a>, <a href="#" id="isaacLink">Isaac</a> & <a href="#" id="maxLink">Max</a>
     </div>
 
     <!-- Sources Modal -->
