--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                 </div>
                 <div class="attribution-section">
                     <h3>S. Max Fan</h3>
-                    <p>Renaissance man</p>
+                    <p>Renaissance person</p>
                 </div>
             </div>
         </div>
