Added stat for daily phone usage, updated/improved sources

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <div class="intro-screen">
         <div class="intro-content">
-            <p class="intro-text">The average person spends <strong>x.xx hrs</strong> on social media every day.</p>
+            <p class="intro-text">The average person spends <strong>5.27 hrs</strong> on their phone every day.</p>
             <p class="intro-subtext">Scroll to see what that really means.</p>
         </div>
         <div class="scroll-indicator">
