--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <p style="position:absolute;top:60px;left:50%;transform:translateX(-50%);font-size:12px;color:#ffffff;opacity:0.5;z-index:9999;margin:0;">Note: This site is currently in an early stage of development</p>
     <div class="progress-bar">
         <div class="progress-fill"></div>
         <div class="progress-scale">
