Added info modal on one liife

--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
             <div class="stat-label">Lives scrolled this year</div>
             <div class="stat-value" id="statYear">0</div>
         </div>
+        <div class="stats-info">
+            <span class="info-icon">ⓘ</span>
+            <span class="info-tooltip">One life represents 80 years of social media usage around the world</span>
+        </div>
     </div>
 
     <div class="intro-screen">
