--- a/index.html
+++ b/index.html
@@ -111,7 +111,12 @@
                 <h2>72,960 Hours</h2>
                 <p>Lifetime social media use per person</p>
             </div>
+            
             <div class="milestone-card-body">
+
+                                <video id="brainrot-video" class="positioned-video" data-position="0.07" data-caption-top="Some brainrot for you..." data-caption-bottom="We haven't lost you yet, have we?" loop playsinline>
+                    <source src="media/brainrot2.mp4" type="video/mp4">
+                </video>
                 <span class="floating-text" data-position="0.2">That's 8.3 years of your life...</span>
                 <span class="floating-text" data-position="0.5">...spent scrolling through feeds</span>
                 <span class="floating-text" data-position="0.8">A decade of moments, lost to the algorithm</span>
@@ -125,18 +130,16 @@
                 <p>Time spent on social media globally, every single minute</p>
             </div>
             <div class="milestone-card-body">
-                <span class="floating-text" data-position="0.1">You're not alone in this scroll...</span>
-                <span class="floating-text" data-position="0.25">Millions of hours. Every. Single. Minute.</span>
-                <div class="mini-card" data-position="0.4">
+                <span class="floating-text" data-position="0.05">You're not alone in this scroll...</span>
+
+                <span class="floating-text" data-position="0.2">Millions of hours. Every. Single. Minute.</span>
+                <div class="mini-card" data-position="0.35">
                     <h3>1 Hour</h3>
                     <p>This tiny card represents just one hour within 8 million</p>
                 </div>
-                <span class="floating-text" data-position="0.55">That's 110 human lifetimes worth of scrolling...</span>
-                <span class="floating-text" data-position="0.7">...happening every single minute</span>
-                <span class="floating-text" data-position="0.85">The scroll is endless—your time isn't.</span>
-                <video id="brainrot-video" class="positioned-video" data-position="0.95" data-caption-top="Some brainrot for you..." data-caption-bottom="We haven't lost you yet, have we?" autoplay loop muted playsinline>
-                    <source src="media/brainrot.mp4" type="video/mp4">
-                </video>
+                <span class="floating-text" data-position="0.5">That's 110 human lifetimes worth of scrolling...</span>
+                <span class="floating-text" data-position="0.65">...happening every single minute</span>
+                <span class="floating-text" data-position="0.8">The scroll is endless—your time isn't.</span>
             </div>
         </div>
 
