--- a/index.html
+++ b/index.html
@@ -123,22 +123,22 @@
             </div>
         </div>
 
-        <!-- 8 million hours - global per-minute social media usage -->
-        <div class="milestone-card scale-card-massive" data-hours="7986111">
+        <!-- 2,666,667 hours - global social media usage every 20 seconds -->
+        <div class="milestone-card scale-card-massive" data-hours="2666667">
             <div class="milestone-card-header">
-                <h2>8 Million Hours</h2>
-                <p>Time spent on social media globally, every single minute</p>
+                <h2>2,666,667 Hours</h2>
+                <p>Time spent on social media globally, every 20 seconds</p>
             </div>
             <div class="milestone-card-body">
                 <span class="floating-text" data-position="0.05">You're not alone in this scroll...</span>
 
-                <span class="floating-text" data-position="0.2">Millions of hours. Every. Single. Minute.</span>
+                <span class="floating-text" data-position="0.2">Millions of hours. Every. 20. Seconds.</span>
                 <div class="mini-card" data-position="0.35">
                     <h3>1 Hour</h3>
-                    <p>This tiny card represents just one hour within 8 million</p>
+                    <p>This tiny card represents just one hour within 2,666,667</p>
                 </div>
-                <span class="floating-text" data-position="0.5">That's 110 human lifetimes worth of scrolling...</span>
-                <span class="floating-text" data-position="0.65">...happening every single minute</span>
+                <span class="floating-text" data-position="0.5">That's 37 human lifetimes worth of scrolling...</span>
+                <span class="floating-text" data-position="0.65">...happening every 20 seconds</span>
                 <span class="floating-text" data-position="0.8">The scroll is endless—your time isn't.</span>
             </div>
         </div>
