Added a bunch of content

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <p>Yearly social media use per person</p>
             </div>
             <div class="milestone-card-body">
-                <span class="floating-text" data-position="0.3">That's 38 full days of your year...</span>
+                <span class="floating-text" data-position="0.2">That's 38 full days of your year...</span>
                 <span class="floating-text" data-position="0.6">...spent scrolling</span>
             </div>
         </div>
@@ -113,13 +113,9 @@
             </div>
             
             <div class="milestone-card-body">
-
-                                <video id="brainrot-video" class="positioned-video" data-position="0.07" data-caption-top="Some brainrot for you..." data-caption-bottom="We haven't lost you yet, have we?" loop playsinline>
-                    <source src="media/brainrot2.mp4" type="video/mp4">
-                </video>
                 <span class="floating-text" data-position="0.2">That's 8.3 years of your life...</span>
                 <span class="floating-text" data-position="0.5">...spent scrolling through feeds</span>
-                <span class="floating-text" data-position="0.8">A decade of moments, lost to the algorithm</span>
+                <span class="floating-text" data-position="0.7">A decade of moments, lost to the algorithm</span>
             </div>
         </div>
 
@@ -130,16 +126,57 @@
                 <p>Time spent on social media globally, every 20 seconds</p>
             </div>
             <div class="milestone-card-body">
-                <span class="floating-text" data-position="0.05">You're not alone in this scroll...</span>
+                <span class="floating-text" data-position="0.02">You're not alone in this scroll...</span>
 
-                <span class="floating-text" data-position="0.2">Millions of hours. Every. 20. Seconds.</span>
-                <div class="mini-card" data-position="0.35">
-                    <h3>1 Hour</h3>
-                    <p>This tiny card represents just one hour within 2,666,667</p>
+                <span class="floating-text" data-position="0.05">Every 20 seconds, humanity burns through 2.6 million hours on social media. This card represents that time, to scale.</span>
+
+                <span class="floating-text" data-position="0.08">We rarely see time waste represented to scale. This is part of the reason we consistently fail to grasp just how much of our collective life is disappearing into feeds.</span>
+
+                <div class="mini-card" data-position="0.12">
+                    <h3>320,000 Hours</h3>
+                    <p>Time it would take to read all of Wikipedia. Every word, every article. That's how far you've scrolled — and it's barely a fraction of what we spend in 20 seconds.</p>
                 </div>
-                <span class="floating-text" data-position="0.5">That's 37 human lifetimes worth of scrolling...</span>
-                <span class="floating-text" data-position="0.65">...happening every 20 seconds</span>
-                <span class="floating-text" data-position="0.8">The scroll is endless—your time isn't.</span>
+
+                <span class="floating-text" data-position="0.16">Keep scrolling. We're not even close.</span>
+
+                <span class="floating-text" data-position="0.20">You might think 320,000 hours sounds like a lot. It is. It's half a human lifetime. But we blow past it every 20 seconds without a thought.</span>
+
+                <div class="mini-card" data-position="0.24">
+                    <h3>640,000 Hours</h3>
+                    <p>One entire human lifetime — 73 years. Every waking moment, every sleeping one. Born, lived, died. That's how much time you've scrolled past.</p>
+                </div>
+
+                <span class="floating-text" data-position="0.28">One complete human life. Gone in a fraction of this scroll.</span>
+
+                <span class="floating-text" data-position="0.33">And we're not even a quarter of the way through what humanity spends in 20 seconds.</span>
+
+                <span class="floating-text" data-position="0.38">Think about that. Everything you will ever experience — every joy, every heartbreak, every sunrise — fits in less than a quarter of this card.</span>
+
+                <span class="floating-text" data-position="0.43">OK, we're coming up on the end now.</span>
+
+                <span class="floating-text" data-position="0.48">Just kidding. We're not even halfway. Keep scrolling.</span>
+
+                <span class="floating-text" data-position="0.53">The time represented by this card is consumed every 20 seconds. By the time you finish scrolling, it will have happened hundreds of times over.</span>
+
+                <span class="floating-text" data-position="0.58">No single app or platform created this problem. We did — collectively, one scroll at a time.</span>
+
+                <span class="floating-text" data-position="0.63">2.6 million hours. That's 37 entire human lifetimes. Consumed. Every. 20. Seconds.</span>
+
+                <span class="floating-text" data-position="0.68">If this time were given to a single person, they would live from the Stone Age to today — and still have lifetimes to spare.</span>
+
+                <span class="floating-text" data-position="0.73">We could read every Wikipedia article four times over. We could build monuments. We could learn languages, write novels, raise families.</span>
+
+                <span class="floating-text" data-position="0.78">Instead, we scroll.</span>
+
+                <span class="floating-text" data-position="0.83">This isn't about guilt. It's about scale. We simply cannot comprehend how much time we are giving away.</span>
+
+                <span class="floating-text" data-position="0.86">You're almost at the end of this card. 20 more seconds just passed. Another 2.6 million hours, gone.</span>
+
+                <video id="brainrot-video" class="positioned-video" data-position="0.90" data-caption-top="Some brainrot for you..." data-caption-bottom="We haven't lost you yet, have we?" loop playsinline>
+                    <source src="media/brainrot2.mp4" type="video/mp4">
+                </video>
+
+                <span class="floating-text" data-position="0.96">The scroll is endless — your time isn't.</span>
             </div>
         </div>
 
